--- a/pom.xml
+++ b/pom.xml
@@ -57,8 +57,7 @@
 		<dependency>
 		    <groupId>com.fasterxml.jackson.dataformat</groupId>
 		    <artifactId>jackson-dataformat-xml</artifactId>
-		    <version>2.9.6</version>
-		</dependency>
+		    </dependency>
 		
 	</dependencies>
 
@@ -68,6 +67,14 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			 <plugin>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.7.0</version>
+            <configuration>
+                <fork>true</fork>
+                <executable>C:\Program Files\java\jdk1.8.0_77\bin\javac.exe</executable>
+            </configuration>
+        </plugin>
 		</plugins>
 	</build>
 
